# memU-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  improvement_suggestion.yml
.github/workflows/: build.yml  ci.yml  code-quality.yml
.pre-commit-hooks/: check_alembic_migrations.py  check_config_credentials.py  check_makefile_commands.py  check_markdown_formatting.py  check_python_credentials.py  check_test_coverage.py
alembic/: env.py
alembic/versions/: 250177434a27_initial_migration.py  52875d5f3609_create_memories_table.py
app/: database.py  main.py
app/models/: __init__.py  base.py  category.py  memory.py  task.py
app/schemas/: memory.py
app/services/: memu.py
app/workers/: __init__.py  memorize_activity.py  memorize_workflow.py  worker.py
config/: __init__.py  memu.py  settings.py
dockerfiles/: Dockerfile
tests/: conftest.py  test_base_model.py  test_clear_categories.py  test_config.py  test_env_validation.py  test_health.py  test_main.py  test_memorize_status.py  test_memory.py  test_memu_config.py  test_memu_service.py  test_models.py  test_temporal_workers.py
