[project]
name = "memu-server"
version = "0.1.0"
description = "Standalone memory service with memorize and retrieve"
requires-python = ">=3.13"

dependencies = [
    # Web Framework
    "fastapi[standard]>=0.121.0",
    "uvicorn[standard]>=0.35.0",
    
    # Database & ORM
    "sqlmodel>=0.0.27",
    "sqlalchemy[asyncio]>=2.0.41",
    "psycopg[binary,pool]>=3.2.9",
    "alembic>=1.16.2",
    "pgvector>=0.3.2",
    
    # Workflow Engine
    "temporalio==1.16.0",
    
    # Memory Engine
    "memu-py[postgres]>=1.2.0",
    
    # LLM & AI
    "openai>=1.54.4",
    
    # Configuration & Utils
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.0",
    "pendulum>=3.1.0",
    "svix-ksuid>=0.6.2",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]